<?xml version="1.0" encoding="utf-8"?>

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Github Ku</string>
    <string name="silahkan_tunggu">Silahkan tunggu</string>
    <string name="nama_pengguna">Nama pengguna</string>
    <string name="id_pengguna">ID pengguna</string>
    <string name="user_organization">Organisasi pengguna</string>
    <string name="cari_user">Cari pengguna</string>
    <string name="searc_hint">cari pengguna</string>
    <string name="bagas_pangestu">Bagas Pangestu</string>
    <string name="keterangan">Seorang mahasiswa informatika yang tertarik dengan coding, yang memiliki cita - cita untuk membuat start-up di bidang teknologi.</string>
    <string name="email">bagasbest80@gmail.com</string>
    <string name="kontak">Kontak saya:</string>
    <string name="media_sosial_saya">Media sosial saya:</string>
    <string name="image">image</string>
    <string name="myquote">Kata bijak saya:</string>
    <string name="jangan_pernah_berhenti_untuk_belajar">Jangan pernah berhenti untuk belajar</string>
    <string name="about_us">Tentang kita</string>
    <string name="username">Nama pengguna</string>
    <string name="repo">Repositori umum : 0</string>
    <string name="your_bio">Bio kamu</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="tab_text_1">Mengikuti</string>
    <string name="tab_text_2">Pengikut</string>
    <string name="belum_mengisi">Belum mengisi</string>
    <string name="belum_memiliki">Belum memiliki repositori</string>
    <string name="empty_value">Maaf, data pencarian kosong! \n silahkan isi kolom pencarian dengan benar</string>
    <string name="ubah_pengaturan_bahasa">Ubah pengaturan bahasa</string>
</resources>
