<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activity.AboutActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="30dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_pb"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="25dp"
            tools:ignore="UselessParent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageIv"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@drawable/avatar_blank"
                app:civ_border_width="5dp"
                app:civ_border_color="#D1CFD0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bagas_pangestu"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp" />

            <TextView
                android:id="@+id/keteranganTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/keterangan" />

            <TextView
                android:id="@+id/quote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/myquote"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/myQuote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jangan_pernah_berhenti_untuk_belajar"
                android:textStyle="italic" />


            <TextView
                android:id="@+id/contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/kontak"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/media"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/media_sosial_saya"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ig"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/avatar_blank"
                    android:onClick="gotoInstagram"
                    android:contentDescription="@string/image"
                    tools:ignore="OnClick" />

                <ImageView
                    android:id="@+id/linkedIn"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/avatar_blank"
                    android:onClick="gotoLinkedIn"
                    android:contentDescription="@string/image"
                    tools:ignore="OnClick" />

            </LinearLayout>





        </LinearLayout>


    </RelativeLayout>

</ScrollView>

