<?xml version="1.0" encoding="utf-8"?>

<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".activity.DetailActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@color/colorPrimary"
            android:elevation="0dp"
            android:orientation="vertical"
            android:gravity="center">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageIv"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                app:civ_border_width="5dp"
                app:civ_border_color="#D1CFD0"
                android:layout_marginBottom="16dp"
                android:background="@drawable/avatar_blank"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/namaTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nama_pengguna"
                    android:textColor="@android:color/white"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:layout_marginEnd="5dp"/>

                <TextView
                    android:id="@+id/usernameTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textSize="17sp"
                    android:textStyle="italic"
                    android:text="@string/username" />

            </LinearLayout>

            <TextView
                android:id="@+id/idTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id_pengguna"
                android:textColor="@android:color/white"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_book_black_24dp"
                        android:layout_marginEnd="10dp"
                        android:contentDescription="@string/image" />

                    <TextView
                        android:id="@+id/publicRepo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/repo"
                        android:textColor="@android:color/white"/>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_work_black_24dp"
                        android:layout_marginEnd="10dp"
                        android:contentDescription="@string/image" />

                    <TextView
                        android:id="@+id/organizationTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_organization"
                        android:textColor="@android:color/white"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_assignment_black_24dp"
                        android:layout_marginEnd="10dp"
                        android:contentDescription="@string/image" />

                    <TextView
                        android:id="@+id/bio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/your_bio"
                        android:textColor="@android:color/white"/>

                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#E80352"
            app:tabTextColor="@android:color/white" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="380dp" />


    </LinearLayout>

</ScrollView>

